-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
With the L/Q model, the verifier cannot verify anymore that putfield and withfield are applied to, respectively, identity objects and primitive objects (see JDK-8269274). Those checks must now be performed during field resolution. The JVM must also performs null-checks on the receiver of a withfield bytecode.
- relates to
-
JDK-8271017 [lworld] Implement withfield changes from JDK-8269408 on AArch64
-
- Resolved
-