8269408: [lworld] Withfield and field resolution update

Reviewed-by: dsimms